@@ -69,7 +69,7 @@ diff -u lunar/lunar-calendar.c lunar.new/lunar-calendar.c
    GdkWindow *main_win;
    GdkWindow *week_win;
    GdkWindow *arrow_win[4];
-+  LUNARDate   *date;
++  LunarDate   *date;
  
    guint header_h;
    guint day_name_h;
